package be.dbproject.models

data class Genre(
    val id: Int,
    val name: String
)