package be.dbproject.models

data class ItemType(
    val id: Int,
    val name: String
)