package be.dbproject.models

data class LocationType(
    val id: Int,
    val name: String
)