package be.dbproject.models

data class Platform(
    val id: Int,
    val name: String,
    val description: String,
    val releaseDate: String
)
