package be.dbproject.models

data class Publisher(
    val id: Int,
    val name: String,
    val description: String,
    val website: String?
)